foundations/docker/localhost/kind/cf-for-k8s-demo/deployments/prometheus-operator/user/opsfiles/prometheus-operator-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-operator
  labels:
    cf-for-k8s.cloudfoundry.org/cf-system-ns: ""

#@ load("@ytt:overlay", "overlay")
#@overlay/match by=overlay.and_op(overlay.subset({"metadata":{"name":"prometheus-operator"}}), overlay.subset({"kind": "Namespace"}))
---
metadata:
  labels:
    #@overlay/replace
    istio-injection: enabled
